add(global.css): link-purple class

--- a/src/assets/css/base/_global.scss
+++ b/src/assets/css/base/_global.scss
@@ -189,6 +189,10 @@ a {
   &.link-black {
     color: var(--color-body-text);
   }
+
+  &.link-purple {
+    color: var(--color-purple);
+  }
 }
 
 button {
