--- a/src/assets/css/components/_open-source-list.scss
+++ b/src/assets/css/components/_open-source-list.scss
@@ -18,6 +18,10 @@
     & .btn-secondary__text {
       font-size: 1.5rem;
     }
+
+    & .opensource-list__project-image {
+      max-width: 32rem;
+    }
 }
 
 .opensource-list__project-image {
