--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -65,7 +65,7 @@ og:
 {{ serviceCards('services', 'What we do best', technologies) }}
 
 <section class="py-10 background-aqua">
-  <div class="container container--xl p-5 background-white" id="team">
+  <div class="container container--xl p-2 pt-4 p-s-5 background-white" id="team">
     <div class="split-content no-link m-0">
       <h1 class="mb-2">We are Rust experts</h1>
       <div class="split-content__wrapper">  
@@ -160,7 +160,7 @@ og:
 
 {% include 'contact-form-LP.njk' %}
 
-<section class="container container--xl opensource-list my-10" id="open-source">
+<section class="container container--xl opensource-list my-10 image-max-width-32" id="open-source">
   <div class="">
     <h1 class="opensource-list__title">You might like...</h1>
     <ul class="opensource-list__list opensource-list__list-redesigned">
