--- a/src/components/color-hero.njk
+++ b/src/components/color-hero.njk
@@ -40,7 +40,7 @@ Example usage:
       </div>
       <div class="color-hero__overlay"></div>
     {% endif %}
-    <div class=" container {% if content.containerType == "lp" %}color-hero__container__LP container__LP{% else %}color-hero__container container--lg{% endif %}">
+    <div class=" container container--xl {% if content.containerType == "lp" %}color-hero__container__LP container__LP{% else %}color-hero__container container--lg{% endif %}">
       <div class="color-hero__main">
         {% if content.eyebrow %}
           <p class="color-hero__eyebrow h5">{{ content.eyebrow | safe }}</p>
