--- a/src/components/contact-form-LP.njk
+++ b/src/components/contact-form-LP.njk
@@ -42,9 +42,7 @@
               name="company"
               placeholder="Company"
             />
-            <label class="contact-form__label h4" for="contact-company-name">
-              Company name
-            </label>
+            <label class="contact-form__label h4" for="contact-company-name"> Company name </label>
           </div>
           <div class="contact-form__field">
             <input
@@ -81,7 +79,8 @@
             </div>
           </button>
           <p class="mt-4">
-            You can also send us an email at <a class="color-white" href="mailto:info@mainmatter.com">info@mainmatter.com </a>
+            You can also send us an email at
+            <a class="color-white" href="mailto:info@mainmatter.com">info@mainmatter.com </a>
           </p>
         </fieldset>
         <div class="contact-form__status">
@@ -117,7 +116,6 @@
         </div>
         {{ invisibleCaptcha() }}
       </form>
-  
     </div>
   </div>
 </section>
