--- a/src/components/quote.njk
+++ b/src/components/quote.njk
@@ -18,7 +18,9 @@ Example usage:
 {{ quote('aqua', text, source, true) }}
 #}
 {%- macro quote(content, alignment='default') -%}
-  <section class="quote {% if alignment=='right' %}align-right{% endif %} {% if content.styling=="redesigned" %}quote__redesigned{% endif %}">
+  <section
+    class="quote {% if alignment=='right' %}align-right{% endif %} {% if content.styling=="redesigned" %}quote__redesigned{% endif %}"
+  >
     {%- if content.image -%}
       <div class="quote__image-wrapper">
         {%- image content.image, content.alt, '(min-width: 48em) 50vw, 100vw', content.loading, 'quote__image', [400] -%}
@@ -35,7 +37,11 @@ Example usage:
           </div>
         {%- endif -%}
         <blockquote class="quote__text">{{ content.text | safe }}</blockquote>
-        <figcaption class="quote__source">{{ content.source }}{% if content.position %}<br><span class="quote__position">{{ content.position }}</span>{% endif %}</figcaption>
+        <figcaption class="quote__source">
+          {{ content.source }}{% if content.position %}
+            <br /><span class="quote__position">{{ content.position }}</span>
+          {% endif %}
+        </figcaption>
       </div>
     </figure>
     {% if alignment == 'right' %}
