--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -30,12 +30,14 @@ og:
 %}
 {{ colorHero('purple', content) }}
 
-{% set content = {
-  'What we do best': '#services',
-  'Our team': '#team',
-  'Success stories': '#successes',
-  'Let’s talk': '#contact'
-} %}
+{%
+  set content = {
+    'What we do best': '#services',
+    'Our team': '#team',
+    'Success stories': '#successes',
+    'Let’s talk': '#contact'
+  }
+%}
 {{ tableOfContents(content) }}
 {%
   set 'tech_1' = {
@@ -68,14 +70,15 @@ og:
   <div class="container container--xl p-2 pt-4 p-s-5 background-white" id="team">
     <div class="split-content no-link m-0">
       <h1 class="mb-2">We are Rust experts</h1>
-      <div class="split-content__wrapper">  
-        <div class="split-content__content m-0">  
+      <div class="split-content__wrapper">
+        <div class="split-content__content m-0">
           <p>
-            Mainmatter has been active in the Rust ecosystem for years, creating the 
-            <a href="https://rust-exercises.com" class="link-black">100 Exercises to Learn Rust</a> course, organizing 
-            <a href="https://www.eurorust.eu" class="link-black">EuroRust</a>, contributing to
-            <a href="https://crates.io" class="link-black">crates.io</a>, and maintaining several other
-            <a href="#open-source" class="link-black">open-source&nbsp;projects</a>. 
+            Mainmatter has been active in the Rust ecosystem for years, creating the
+            <a href="https://rust-exercises.com" class="link-black">100 Exercises to Learn Rust</a>
+            course, organizing <a href="https://www.eurorust.eu" class="link-black">EuroRust</a>,
+            contributing to <a href="https://crates.io" class="link-black">crates.io</a>, and
+            maintaining several other
+            <a href="#open-source" class="link-black">open-source&nbsp;projects</a>.
           </p>
           <p>
             Our team is led by Luca Palmieri, author of
@@ -120,7 +123,7 @@ og:
     {{ quote(content) }}
   </div>
   <div class="container container--xl mb-6">
-    {% 
+    {%
       set link = {
       "label": '5-8 words summarizing the Redis project here',
       "url": '/work#redis'
@@ -128,7 +131,7 @@ og:
     %}
     {{ btnSecondary( link, 'mt-2' ) }}
 
-    {% 
+    {%
       set link = {
       "label": '5-8 words summarizing the KISTERS project here',
       "url": '/cases/kisters/'
@@ -136,7 +139,7 @@ og:
     %}
     {{ btnSecondary( link, 'mt-2' ) }}
 
-    {% 
+    {%
       set link = {
       "label": '5-8 words summarizing the Aleph Alpha project here',
       "url": '/cases/aleph-alpha/'
@@ -166,7 +169,10 @@ og:
     <ul class="opensource-list__list opensource-list__list-redesigned">
       <li class="opensource-list__project">
         <div class="opensource-list__project-image">
-          <img src="/assets/images/rust/redis-youtube-talk.webp" alt="Luca Palmieri presenting Mainmatter's Redis contributions on stage" />
+          <img
+            src="/assets/images/rust/redis-youtube-talk.webp"
+            alt="Luca Palmieri presenting Mainmatter's Redis contributions on stage"
+          />
         </div>
         <div class="opensource-list__project-text">
           <h4 class="mb-015">A deep-dive into our work for Redis at EuroRust 2025</h4>
@@ -196,7 +202,10 @@ og:
       </li>
       <li class="opensource-list__project">
         <div class="opensource-list__project-image">
-          <img src="/assets/images/rust/rust-handbook.webp" alt="Hand reaching out to a crab-shaped toy" />
+          <img
+            src="/assets/images/rust/rust-handbook.webp"
+            alt="Hand reaching out to a crab-shaped toy"
+          />
         </div>
         <div class="opensource-list__project-text">
           <h4 class="mb-015">The Rust Adoption Handbook</h4>
