--- a/src/assets/css/components/_table-of-contents.scss
+++ b/src/assets/css/components/_table-of-contents.scss
@@ -13,7 +13,7 @@
     justify-items: center;
   }
 
-  @media (min-width: $breakpoint-xl) {
+  @media (min-width: $breakpoint-l) {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
