--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -41,26 +41,26 @@ og:
 
 {%
   set 'tech_1' = {
-  "title": "Rust is a competitive advantage",
-  "text": "Roughly 15 words about C to Rust migration here. Word word. More words. Maybe some more, not more than this though.",
-  "label": "Click here",
-  "link": "rust-consulting"
+  "title": "C→Rust Migrations",
+  "text": "We migrate your project incrementally, improving safety, reliability, and maintainability without disrupting your day-to-day operations.",
+  "label": "Let's talk",
+  "link": "#contact"
   }
 %}
 {%
   set 'tech_2' = {
-  "title": "Svelte is the future of frontend development",
-  "text": "Roughly 15 words about C to Rust migration here. Word word. More words. Maybe some more, not more than this though.",
-  "label": "See here",
-  "link": "svelte-consulting"
+  "title": "Backends You Can Trust",
+  "text": "We architect and deliver reliable cloud-native systems that scale efficiently under load without sacrificing long-term maintainability.",
+  "label": "Let's talk",
+  "link": "#contact"
   }
 %}
 {%
   set 'tech_3' = {
-  "title": "Ember is our expertise",
-  "text": "Roughly 15 words about C to Rust migration here. Word word. More words. Maybe some more, not more than this though.",
-  "label": "Mouse over here",
-  "link": "ember-consulting"
+  "title": "Trainings and Workshops",
+  "text": "We’ve trained hundreds of engineers at all levels. We help you strengthen your ability to ship safer, faster, and more robust Rust code.",
+  "label": "Learn more",
+  "link": "/services/workshops/rust/"
   }
 %}
 {% set technologies = [tech_1, tech_2, tech_3] %}
@@ -125,7 +125,7 @@ og:
   <div class="container container--xl mb-6">
     {%
       set link = {
-      "label": '5-8 words summarizing the Redis project here',
+      "label": 'Rewriting Redis Query Engine in Rust, one C module at a time',
       "url": '/work#redis'
       }
     %}
@@ -133,7 +133,7 @@ og:
 
     {%
       set link = {
-      "label": '5-8 words summarizing the KISTERS project here',
+      "label": 'Server, AWS Lambda, Edge: Rust to rule them all at KISTERS',
       "url": '/cases/kisters/'
       }
     %}
@@ -141,7 +141,7 @@ og:
 
     {%
       set link = {
-      "label": '5-8 words summarizing the Aleph Alpha project here',
+      "label": 'Preprocessing trillions of tokens for LLM training at Aleph Alpha',
       "url": '/cases/aleph-alpha/'
       }
     %}
