add Jonas' WASM workshop

--- a/src/services/workshops.njk
+++ b/src/services/workshops.njk
@@ -28,6 +28,7 @@ og:
   collections.workshops | findByCollectionSlug("modernising-ember-development"),
   collections.workshops | findByCollectionSlug("learn-rust-starting-from-scratch"),
   collections.workshops | findByCollectionSlug("introduction-to-rust-for-web-developers"),
+  collections.workshops | findByCollectionSlug("edge-computing-with-webassembly"),
   collections.workshops | findByCollectionSlug("build-production-ready-apis-in-rust"),
   collections.workshops | findByCollectionSlug("telemetry-for-rust-apis"),
   collections.workshops | findByCollectionSlug("an-introduction-to-testing-in-rust"),
