--- a/src/services/workshops/rust.njk
+++ b/src/services/workshops/rust.njk
@@ -28,6 +28,7 @@ image: "/assets/images/workshops/rust-og-image.jpg"
   set workshops = [
     collections.workshops | findByCollectionSlug("learn-rust-starting-from-scratch"),
     collections.workshops | findByCollectionSlug("rust-python-interoperability"),
+    collections.workshops | findByCollectionSlug("edge-computing-with-webassembly"),
     collections.workshops | findByCollectionSlug("an-introduction-to-testing-in-rust"),
     collections.workshops | findByCollectionSlug("advanced-testing-in-rust"),
     collections.workshops | findByCollectionSlug("telemetry-for-rust-apis"),
