--- a/src/assets/css/components/_service-cards.scss
+++ b/src/assets/css/components/_service-cards.scss
@@ -16,6 +16,9 @@
   }
 
   & .service-card__grid-element {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 4rem 2rem;
 
     @media (min-width: $breakpoint-m) {
