--- a/src/assets/css/components/_color-hero.scss
+++ b/src/assets/css/components/_color-hero.scss
@@ -119,4 +119,9 @@
 .color-hero__container__LP {
   width: 90%;
   padding: 12rem 0 10vh;
+
+  .color-hero__text {
+    max-width: max-content;
+  }
 }
+
