--- a/src/components/contact-form-LP.njk
+++ b/src/components/contact-form-LP.njk
@@ -2,11 +2,11 @@
 
 <section class="contact-form color-hero color-hero--purple" data-background-color="purple">
   <div class="contact-form__container">
-    <div class="contact-form__main container container--xl py-10">
+    <div class="contact-form__main container container--lg pt-7 pb-10">
       <h1 class="contact-form__heading" id="contact">Let’s talk!</h1>
-      <p class="contact-form__text">
+      <p class="medium">
         Let's talk about the challenges you're facing. Our experts are ready to guide you through
-        your next big move.
+        your next big&nbsp;move.
       </p>
       <h4 class="mt-4">Send us a message</h4>
       <form
@@ -78,8 +78,8 @@
               {% include 'svg/arrow.njk' %}
             </div>
           </button>
-          <p class="mt-4">
-            You can also send us an email at
+          <p class="mt-4 medium">
+            You can also send us an email at&nbsp;
             <a class="color-white" href="mailto:info@mainmatter.com">info@mainmatter.com </a>
           </p>
         </fieldset>
