--- a/src/components/service-cards.njk
+++ b/src/components/service-cards.njk
@@ -2,12 +2,11 @@
 
 {% macro serviceCards(id, title, cards) %}
   <section class="service-cards" id="{{ id }}">
-    <div class="service-cards__container container container--xl">
+    <div class="service-cards__container container container--lg">
       {% if title %}
         <h1 class="service-cards__title">{{ title }}</h1>
       {% endif %}
-      <p class="service-cards__intro mt-25 mb-5">{{ intro | safe }}</p>
-      <div class="cards__grid pb-10 service-cards__grid">
+      <div class="cards__grid pb-7 service-cards__grid">
         {% for card in cards %}
           <div class="service-cards__grid-element service-card__grid-element">
             <h3 class="screenreader">{{ card.title }}</h3>
@@ -16,7 +15,7 @@
                 <h4 class="mb-2">{{ card.title }}</h4>
               {% endif %}
               {% if card.text %}
-                <p class="mb-2">{{ card.text }}</p>
+                <p class="mb-2 medium">{{ card.text }}</p>
               {% endif %}
             </div>
             {% if card.link %}
