--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -190,7 +190,9 @@ og:
           <img src="/assets/images/rust/eserde-blog-post.webp" alt="Rust logo" />
         </div>
         <div class="opensource-list__project-text">
-          <h4 class="mb-015 medium">Blog post: eserde: Don't stop at the first deserialization error</h4>
+          <h4 class="mb-015 medium">
+            Blog post: eserde: Don't stop at the first deserialization error
+          </h4>
           {%
             set link = {
             "label": 'Read blog post',
