--- a/src/components/service-cards.njk
+++ b/src/components/service-cards.njk
@@ -25,7 +25,7 @@
                 "url": card.link
                 }
               %}
-              {{ btnPrimary( link, 'aqua', 'nav__cta service-cards__btn' ) }}
+              {{ btnPrimary( link, 'aqua', 'service-cards__btn' ) }}
             {% endif %}
           </div>
         {% endfor %}
