add(table of contents): hide 'what we do best' on desktop

--- a/src/assets/css/base/_utility.scss
+++ b/src/assets/css/base/_utility.scss
@@ -34,8 +34,8 @@
   }
 }
 
-.display-hidden {
-  @media (min-width: $breakpoint-s) {
+.desktop-hidden {
+  @media (min-width: $breakpoint-m) {
     display: none;
   }
 }
