--- a/src/components/color-hero.njk
+++ b/src/components/color-hero.njk
@@ -72,7 +72,7 @@ Example usage:
         {% if content.toc %}
           <div class="table-of-contents__list container--xl mt-2">
             {% for text, anchor in content.toc %}
-              <div>
+              <div class="{% if loop.index == 1 %}desktop-hidden{% endif %}">
                 {%-
                   set link = {
                   "label": text,
