--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -168,14 +168,18 @@ og:
     <h1 class="opensource-list__title">You might like...</h1>
     <ul class="opensource-list__list opensource-list__list-redesigned">
       <li class="opensource-list__project">
-        <div class="opensource-list__project-image">
-          <img
-            src="/assets/images/rust/redis-youtube-talk.webp"
-            alt="Luca Palmieri presenting Mainmatter's Redis contributions on stage"
-          />
+        <div>
+          <div class="opensource-list__project-image">
+            <img
+              src="/assets/images/rust/redis-youtube-talk.webp"
+              alt="Luca Palmieri presenting Mainmatter's Redis contributions on stage"
+            />
+          </div>
+          <div class="opensource-list__project-text">
+            <h4 class="mb-015 medium">A deep-dive into our work for Redis at EuroRust 2025</h4>
+          </div>
         </div>
-        <div class="opensource-list__project-text">
-          <h4 class="mb-015 medium">A deep-dive into our work for Redis at EuroRust 2025</h4>
+        <div class="opensource-list__project-link">
           {%
             set link = {
             "label": 'Watch on YouTube',
@@ -186,13 +190,17 @@ og:
         </div>
       </li>
       <li class="opensource-list__project">
-        <div class="opensource-list__project-image">
-          <img src="/assets/images/rust/eserde-blog-post.webp" alt="Rust logo" />
+        <div>
+          <div class="opensource-list__project-image">
+            <img src="/assets/images/rust/eserde-blog-post.webp" alt="Rust logo" />
+          </div>
+          <div class="opensource-list__project-text">
+            <h4 class="mb-015 medium">
+              Blog post: eserde: Don't stop at the first deserialization error
+            </h4>
+          </div>
         </div>
-        <div class="opensource-list__project-text">
-          <h4 class="mb-015 medium">
-            Blog post: eserde: Don't stop at the first deserialization error
-          </h4>
+        <div class="opensource-list__project-link">
           {%
             set link = {
             "label": 'Read blog post',
@@ -203,14 +211,18 @@ og:
         </div>
       </li>
       <li class="opensource-list__project">
-        <div class="opensource-list__project-image">
-          <img
-            src="/assets/images/rust/rust-handbook.webp"
-            alt="Hand reaching out to a crab-shaped toy"
-          />
+        <div>
+          <div class="opensource-list__project-image">
+            <img
+              src="/assets/images/rust/rust-handbook.webp"
+              alt="Hand reaching out to a crab-shaped toy"
+            />
+          </div>
+          <div class="opensource-list__project-text">
+            <h4 class="mb-015 medium">The Rust Adoption Handbook</h4>
+          </div>
         </div>
-        <div class="opensource-list__project-text">
-          <h4 class="mb-015 medium">The Rust Adoption Handbook</h4>
+        <div class="opensource-list__project-link">
           {%
             set link = {
             "label": 'Download handbook',
