--- a/src/components/image-aspect-ratio-with-button.njk
+++ b/src/components/image-aspect-ratio-with-button.njk
@@ -15,22 +15,24 @@
       {% endif %}
     </div>
     <div class="image-aspect-ratio-with-button__image">
-      {%
-        set imageData = {
-        "imgPath": content.imgPath,
-        "alt": content.alt,
-        "sizes": content.sizes,
-        "loading": content.loading,
-        "sizesArray": content.sizesArray
-        }
-      %}
-      {% if content.aspectRatioDesktop %}
-        {% set aspectRatioDesktop = content.aspectRatioDesktop %}
-      {% endif %}
-      {% if content.aspectRatioMobile %}
-        {% set aspectRatioMobile = content.aspectRatioMobile %}
-      {% endif %}
-      {{ imageAspectRatio(imageData, aspectRatioDesktop, aspectRatioMobile) }}
+      <a href="{{ content.linkUrl }}">
+        {%
+          set imageData = {
+          "imgPath": content.imgPath,
+          "alt": content.alt,
+          "sizes": content.sizes,
+          "loading": content.loading,
+          "sizesArray": content.sizesArray
+          }
+        %}
+        {% if content.aspectRatioDesktop %}
+          {% set aspectRatioDesktop = content.aspectRatioDesktop %}
+        {% endif %}
+        {% if content.aspectRatioMobile %}
+          {% set aspectRatioMobile = content.aspectRatioMobile %}
+        {% endif %}
+        {{ imageAspectRatio(imageData, aspectRatioDesktop, aspectRatioMobile) }}
+      </a>
     </div>
   </div>
 {% endmacro %}
